--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In - Expenso</title>
-    <link rel="icon" href="/favicon.jpg">
+    <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
