--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign In - Expenso</title>
+    <title>Sign In</title>
     <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
